2003-05-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add code to parse
	function bodies and generate xrefs for
	function calls inside a function declaration.
	Add new FUNCTION state and use parser state
	stacks so that we can push a mode like COMMENT
	and then pop back into a mode like FUNCTION.
	Handle newlines in addition to spaces and
	tabs as a separator character.
	* tests/parsers/php.test: Add tests for
	functions and comments in functions.

2003-05-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (main):
	* parsers/cpp/skeleton.c (main):
	* parsers/java/skeleton.c (main):
	* parsers/tcl/skeleton.c (main):
	Remove incorrect comment that claimed the
	-x option to the parsers was ignored.

2003-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tmeter.tcl (make_scale_window,
	hide_loading_message, sn_loading_message): Remove
	some pointless catch calls.

2003-05-15  John Lash  <jlash@speakeasy.net>

	* gui/tmeter.tcl (sn_loading_message):
	Remove raise call from gui/tmeter.tcl. This eliminates
	a repeated two second pause during the initial
	loading screen. The problem has been seen using both
	gnome and kde desktops and is a bug in the respective
	window managers.

2003-05-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (main):
	* parsers/fortran/ftnchek.c (main):
	* parsers/java/skeleton.c (main):
	* parsers/tcl/skeleton.c (main):
	* parsers/toolbox/snptools.c (sn_process_options):
	Check to make sure the file name passed as
	the -y argument actually exists. This avoids
	a problem where a typo in the file name
	generates a usage message.

2003-05-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_create_new_project): Check each
	import directory to see if it exists and generate
	an error if it does not. This avoids a problem
	where a typo in a directory name will create